Closed
Bug 458113
Opened 16 years ago
Closed 16 years ago
OS/2 build breaks after Implementation of user font set object
Categories
(Core :: Graphics, defect, P3)
Tracking
()
RESOLVED
FIXED
People
(Reporter: wuno, Assigned: jtd)
References
Details
Attachments
(1 file)
1.14 KB,
patch
|
wuno
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (OS/2; U; Warp 4.5; en-US; rv:1.9.1b1pre) Gecko/20080930011334 Minefield/3.1b1pre
Build Identifier:
E:/usr/src/hg/comm-central/mozilla/gfx/thebes/src/gfxPlatform.cpp
In file included from E:/usr/src/hg/comm-central/mozilla/gfx/thebes/src/gfxPlatform.cpp:52:
../../../dist/include/thebes/gfxOS2Platform.h:75: error: expected `,' or `...' before "gfxUserFontSet"
../../../dist/include/thebes/gfxPlatform.h:192: warning: `virtual gfxFontGroup* gfxPlatform::CreateFontGroup(const nsAString_internal&, const gfxFontStyle*, gfxUserFontSet*)' was hidden
../../../dist/include/thebes/gfxOS2Platform.h:75: warning: by `gfxFontGroup* gfxOS2Platform::CreateFontGroup(const nsAString_internal&, const gfxFontStyle*)'
E:/usr/src/hg/comm-central/mozilla/gfx/thebes/src/gfxPlatform.cpp: In static member function `static nsresult gfxPlatform::Init()':
E:/usr/src/hg/comm-central/mozilla/gfx/thebes/src/gfxPlatform.cpp:180: error: cannot allocate an object of type `gfxOS2Platform'
E:/usr/src/hg/comm-central/mozilla/gfx/thebes/src/gfxPlatform.cpp:180: error: because the following virtual functions are abstract:
../../../dist/include/thebes/gfxPlatform.h:192: error: virtual gfxFontGroup* gfxPlatform::CreateFontGroup(const nsAString_internal&, const gfxFontStyle*, gfxUserFontSet*)
make.exe[6]: *** [gfxPlatform.o] Error 1
hm, just wanted to test Paul's new gcc-3.4.6 build, but...
Reproducible: Always
Steps to Reproduce:
1.
2.
3.
Reporter | ||
Updated•16 years ago
|
Priority: -- → P3
Summary: OS/2 build breaks after implementation of Implementation of user font set object → OS/2 build breaks after Implementation of user font set object
Assignee | ||
Comment 1•16 years ago
|
||
Argh, malformed method declaration. Let me know if there's something else that breaks.
Reporter | ||
Comment 2•16 years ago
|
||
Comment on attachment 341411 [details] [diff] [review]
patch, possible fix
John, you're right, the patch is fixing the problem. Firefox is building and running again on OS/2. Looking at your checkin for bug441473 it was by accident the only gfx*Platform.h file where you missed the comma. I could have seen it earlier, the compiler said it already ;-)
I don't have permission to check it in, could you do it then? thanks
Attachment #341411 -
Flags: review+
Assignee | ||
Updated•16 years ago
|
Attachment #341411 -
Flags: superreview?(vladimir)
Updated•16 years ago
|
Attachment #341411 -
Flags: superreview?(vladimir)
Comment 3•16 years ago
|
||
Comment on attachment 341411 [details] [diff] [review]
patch, possible fix
No need to sr OS/2 code.
Comment 4•16 years ago
|
||
Tinderboxes open and me being available never seems to coincide any more, so would be great if somebody else could check in this OS/2 only build break fix.
Keywords: checkin-needed
Assignee | ||
Updated•16 years ago
|
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Updated•16 years ago
|
Keywords: checkin-needed
Updated•15 years ago
|
Assignee: nobody → jdaggett
You need to log in
before you can comment on or make changes to this bug.
Description
•