Bug 458113. Fix syntax error that broke OS/2 build. r+wuno