gfx/thebes/public/gfxOS2Platform.h
@@ -71,7 +71,7 @@ public:
     nsresult GetStandardFamilyName(const nsAString& aFontName, nsAString& aFamilyName);
 
     gfxFontGroup *CreateFontGroup(const nsAString &aFamilies,
-                                  const gfxFontStyle *aStyle
+                                  const gfxFontStyle *aStyle,
                                   gfxUserFontSet *aUserFontSet);
 
     // Given a string and a font we already have, find the font that
